--- a/app/templates/components/pac-man.hbs
+++ b/app/templates/components/pac-man.hbs
@@ -1,3 +1,3 @@
 <!-- in app/templates/components/pac-man.hbs -->
-<canvas id="myCanvas" width="800" height="600"></canvas>
+<canvas id="myCanvas" width={{screenPixelWidth}} height={{screenPixelHeight}}></canvas>
 
