Working on Issue with Level Up

--- a/app/templates/components/pac-man.hbs
+++ b/app/templates/components/pac-man.hbs
@@ -1,3 +1,6 @@
 <!-- in app/templates/components/pac-man.hbs -->
 <canvas id="myCanvas" width={{screenPixelWidth}} height={{screenPixelHeight}}></canvas>
+<br>
+Score: {{score}} &nbsp; &nbsp; &nbsp; Level: {{levelNumber}}
+
 
